make sure CKeditor cannot override this if images are too wide

--- a/aa_bulletin_board/static/aa_bulletin_board/css/aa-bulletin-board.css
+++ b/aa_bulletin_board/static/aa_bulletin_board/css/aa-bulletin-board.css
@@ -32,7 +32,7 @@
 
     .aa-bulletin-board img {
         max-width: 100%;
-        height: auto;
+        height: auto !important; /* to override inline style added by CKeditor */
     }
 }
 
